@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-02T08:27:49Z",
-  "count_outdated" : 98,
-  "uniques_outdated" : 63,
+  "timestamp" : "2022-06-03T16:18:07Z",
+  "count_outdated" : 99,
+  "uniques_outdated" : 64,
   "count" : 106,
   "uniques" : 70,
   "clones" : [
-    {
-      "timestamp": "2022-05-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 6,
